# PerCom

./: README.md
dotnet/: Dockerfile  DotNetServer.csproj  Program.cs  docker-compose.yml
dotnet/Controllers/: PostsController.cs
dotnet/Models/: Post.cs  PostInput.cs
go/: Dockerfile  docker-compose.yml  go.mod  main.go  main_test.go
java/: .gitignore  Dockerfile  docker-compose.yml  run_test.sh  settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/main/java/posts/controller/: ControllerExceptionHandler.java  PostController.java
nodejs/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  run_server.sh  tsconfig.json
nodejs/src/: main.ts
nodejs/src/envs/: logger.ts  paths.ts
nodejs/src/scheme/posts/: model.ts  provider.ts  routes.ts
nodejs/src/scheme/posts/providers/: dummy.ts  index.ts
python/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
python/app/: main.py  models.py  schemas.py  storage.py
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  server.sh  test.sh  todos.md
rust/src/: main.rs
rust/src/envs/: logs.rs  mod.rs  paths.rs  vars.rs
rust/src/scheme/: mod.rs  provider.rs
rust/src/scheme/auth/: mod.rs
rust/src/scheme/posts/: mod.rs  model.rs  proptests.rs  provider.rs  routes.rs
rust/src/scheme/posts/providers/: dummy.rs
rust/src/scheme/users/: model.rs  proptests.rs  provider.rs  routes.rs
rust/src/scheme/users/providers/: dummy.rs
rust/src/state/: mod.rs
rust/src/tests/posts/: mod.rs  stat.rs
stat/: performance.ods
(+4 files in other folders)
