[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
chrono = { version = "0.4", features = ["serde"] }
serde =  { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"]}
tracing-appender = "0.2"
futures-util = "0.3"

[dev-dependencies]
proptest = "1.7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }